// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.resume;

option java_multiple_files = true;

import "io/harness/pms/contracts/ambiance/ambiance.proto";
import "io/harness/pms/contracts/execution/execution_mode.proto";
import "io/harness/pms/contracts/refobjects/ref_objects.proto";

message NodeResumeEvent {
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 1;
  io.harness.pms.contracts.execution.ExecutionMode executionMode = 2;
  bytes stepParameters = 3;
  repeated io.harness.pms.contracts.refobjects.RefObject refObjects = 4;
  bool asyncError = 5;
  map<string, bytes> response = 6;
  ChainDetails chainDetails = 7;
}

message ChainDetails {
  bool isEnd = 1;
  bytes passThroughData = 2;
}
